# grib2pf

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  ACKNOWLEDGMENTS.md  CMakeLists.txt  LICENSE  README.md  aws.py  grib2pf-settings.py  grib2pf-ui.py  grib2pf-ui.spec  grib2pf.py  grib2pf.spec  grib2pflib.py  hrrr_wrfsfcf00_products.csv  hrrr_wrfsfcf01_products.csv  nomads.py  notes.md  products.txt  requirements.txt  requirments.txt  rtmp2p5_ru_products.csv  run.bat  run.sh  setup.bat  setup.sh
.github/workflows/: linux.yml  windows.yml
examples/: README.md  all.jsonc  default.jsonc  palette.jsonc  precipitation-flag.jsonc  to-host.jsonc  two-placefiles.jsonc
icon/: icon.xcf
include/: color_table.h  grib2pf.h
palettes/: PF.pal  snow.pal  temperature.pal
presets/: MRMSTypedPrecipitation.jsonc  QPE_1h.jsonc  all.jsonc  cc.jsonc  default.jsonc  precipitation-flag.jsonc  surface-temperature.jsonc  two-placefiles.jsonc
source/: color_table.c  grib2pf.c
